--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,17 @@
     <artifactId>Exam Test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <inherited>false</inherited>
+            </plugin>
+        </plugins>
+    </build>
+
  <dependencies>
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
